# SnailRace

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: fetch_kara_rules.py
tests/: test_query_io.py  test_runner.py
trapi_performance_tester/: __init__.py  cli.py  query_io.py  runner.py
trapi_performance_tester/package_queries/: imatinib_asthma_hops.jsonl  kara_affects_activity_decreased.jsonl  kara_affects_activity_increased.jsonl  kara_affects_activity_or_abundance_decreased.jsonl  kara_affects_activity_or_abundance_increased.jsonl  kara_contraindicated_for.jsonl  kara_treats.jsonl  robokop_two_hop_trapi.jsonl
